[package]
name = "vulkano-transparent-cursor"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Gennadij Yatskov <gennadij@yatskov.online>"]

[[bin]]
name = "vulkano-transparent-cursor"
path = "main.rs"
test = false
bench = false
doc = false


[dependencies]
winit = "0.29"
vulkano = "0.35.0"
vulkano-util = "0.35.0"
vulkano-shaders = "0.35"
smallvec = "1.13"
